# protocolo61499_on_ESP32

./: .gitignore
4diac-forte/: .gitmodules  CMakeLists.txt
4diac-forte/core/arch/: CMakeLists.txt
4diac-forte/core/arch/freeRTOS/: CMakeLists.txt
4diac-forte/core/arch/freeRTOS/include/: FreeRTOSConfig.h
4diac-forte/core/arch/freeRTOS/include/forte/arch/: sockhand_lwip.h
4diac-forte/core/arch/posix/include/forte/arch/: sockhand.h
4diac-ide_2.0.1/: 4diac-ide.ini  artifacts.xml
4diac-ide_2.0.1/.metadata/: version.ini
4diac-ide_2.0.1/.metadata/.plugins/org.eclipse.core.resources/.root/: 5.tree
4diac-ide_2.0.1/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
4diac-ide_2.0.1/.metadata/.plugins/org.eclipse.fordiac.ide.export.ui/: dialog_settings.xml
4diac-ide_2.0.1/.metadata/.plugins/org.eclipse.fordiac.ide.fmu/: dialog_settings.xml
4diac-ide_2.0.1/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
4diac-ide_2.0.1/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
4diac-ide_2.0.1/Tool Library/: .project
4diac-ide_2.0.1/configuration/: config.ini
4diac-ide_2.0.1/configuration/org.eclipse.core.runtime/: .contributions.1  .contributors.1  .extraData.1  .mainData.1  .namespaces.1  .orphans.1  .table.1
4diac-ide_2.0.1/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
4diac-ide_2.0.1/configuration/org.eclipse.equinox.simpleconfigurator/: bundles.info
4diac-ide_2.0.1/configuration/org.eclipse.equinox.source/: source.info
4diac-ide_2.0.1/configuration/org.eclipse.osgi/: framework.info.2
4diac-ide_2.0.1/configuration/org.eclipse.osgi/.manager/: .fileTable.2  .fileTable.3
4diac-ide_2.0.1/configuration/org.eclipse.ui.intro.universal/: extensionNames.xml
4diac-ide_2.0.1/configuration/org.eclipse.update/: platform.xml
4diac-ide_2.0.1/configuration/org.eclipse.update/history/: 1776361801362.xml
4diac-ide_2.0.1/features/org.eclipse.elk.algorithms.feature_0.7.1/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.elk.feature_0.7.1/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.fordiac.ide.comgeneration.feature_2.0.0.202310230926/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.fordiac.ide.deployment.feature_2.0.1.202310230926/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.fordiac.ide.export.feature_2.0.1.202310230926/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.fordiac.ide.runtime.feature_2.0.0.202310230926/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.fordiac.ide.typeeditor.feature_2.0.1.202310230926/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.fordiac.ide.workbench.feature_2.0.1.202310230926/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.jgit.ssh.jsch_5.12.0.202106070339-r/: feature.xml
4diac-ide_2.0.1/features/org.eclipse.justj.openjdk.hotspot.jre.full.stripped_16.0.2.v20210721-1149/: feature.xml  p2.inf
4diac-ide_2.0.1/p2/org.eclipse.equinox.p2.core/cache/: artifacts.xml
4diac-ide_2.0.1/p2/org.eclipse.equinox.p2.repository/cache/: 328399645
4diac-ide_2.0.1/plugins/org.eclipse.justj.openjdk.hotspot.jre.full.stripped.win32.x86_64_16.0.2.v20210721-1149/jre/: org.eclipse.justj.properties
4diac-ide_2.0.1/teste/: .project  teste.sys
4diac-ide_2.0.1/x/: .project  x.sys
SIFBs/: D_OUT.cpp  D_OUT.h
esp-4diac-forte/: CMakeLists.txt  README.md
esp-4diac-forte/test_apps/TestApplication/: sdkconfig
esp-4diac-forte/test_apps/TestApplication/components/forte_main/: CMakeLists.txt  forte_main.cpp
forte_2/: CMakeLists.txt  forte_config.h.in
forte_2.0.1/: CMakeLists.txt
forte_2.0.1/buildsupport/: generate_stringlist_include_files.cmake
forte_2.0.1/docker/: Dockerfile_forte
forte_2.0.1/src/arch/: bsdsocketinterf.cpp
forte_2.0.1/src/com/powerlink/: CMakeLists.txt
forte_2.0.1/src/core/: cfb.h
forte_2.0.1/src/core/cominfra/: localcomlayer.cpp
forte_2.0.1/src/core/datatypes/: forte_any_bit.h  forte_any_elementary.h
forte_2.0.1/src/modules/mlpi/: CMakeLists.txt
forte_2.0.1/src/modules/rt_events/: RT_E_DEMUX.cpp  RT_E_SPLIT.cpp  RT_E_SWITCH.cpp
forte_2.0.1/tests/core/: iec61131_functionstests.cpp
forte_2.0.1/tests/core/cominfra/: fbdkasn1layerser_test.cpp
forte_2.0.1/tests/core/datatypes/: CIEC_ARRAY_test.cpp
forte_2/buildsupport/: forte.cmake  generate_init.cmake  generate_stringlist.cmake
forte_2/src/arch/: CMakeLists.txt  bsdsocketinterf.cpp  bsdsocketinterf.h
forte_2/src/arch/freeRTOS/: CMakeLists.txt
forte_2/src/com/opc_ua/: opcua_local_handler.cpp
forte_2/src/core/cominfra/: fbdkasn1layer.cpp  rawdatacomlayer.cpp
forte_2/src/modules/convert/: CMakeLists.txt
forte_2/src/stdfblib/net/: CMakeLists.txt
forte_2/tests/core/cominfra/: fbdkasn1layerdeser_test.cpp
forte_2/tests/stdfblib/events/: E_DELAY_tester.cpp  E_DEMUX_tester.cpp  E_F_TRIG_tester.cpp  E_R_TRIG_tester.cpp  E_SR_tester.cpp
(+15 files in other folders)
